# snip-it

./: .gitignore  AGENTS.md  AGENTS.override.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  USER_GUIDE.md  build.rs  build.sh  deny.toml  plan.md  rust-toolchain.toml  rustfmt.toml  snippets.example.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  link-check.yml  release.yml
.poolside/: settings.local.yaml
.skills/: architecture-review.md  encryption-module.md  keychain-integration.md  remediation-patterns.md  server-module.md  sync-module.md  ui-module.md
architecture/: auto_sync.md  cli.md  clipboard.md  config.md  core.md  encryption.md  library.md  logging.md  outcome.md  output.md  overview.md  persistence.md  proto.md  review_plan.md  selector.md  server.md  sort.md  status.md  sync.md  test-infrastructure.md  tui.md  ui.md  usage.md  utils.md
architecture/commands/: clip_cmd.md  cron_cmd.md  edit_cmd.md  keybindings_cmd.md  library_cmd.md  list_cmd.md  mod.md  new_cmd.md  premade_cmd.md  register_cmd.md  run_cmd.md  search_cmd.md  sync_cmd.md
architecture/utils/: variables.md
assets/: demo.tape
docs/: API_TIGHTENING_FINDINGS.md  ARCHITECTURE_INVENTORY.md  CANONICAL_OPERATIONS.md  CLI_EXITCODE_STREAM_POLICY.md  COMMAND_CONTRACTS.md  COMPATIBILITY.md  EXIT_CODES.md  FEATURE_BOUNDARIES.md  FUZZING_AND_PROPERTY_TESTS.md  IDENTITY_CONTRACT.md  JSON_SCHEMAS.md  LIBRARY_SCOPE.md  LOGICAL_LAYERS.md  OBSOLETE_ITEMS.md  PERSISTENCE_INVENTORY.md  PET_COMPATIBILITY.md  PUBLIC_API.md  RELEASE_1B_DESIGN_DECISIONS.md  SECURITY_AUDIT.md  SUPPLY_CHAIN_POLICY.md  THREAT_MODEL.md
plans/: cli.md  cli_review.md  clipboard.md  clipboard_review.md  commands.md  config.md  config_review.md  core.md  core_review.md  encryption.md  encryption_review.md  halloy-themes.md  homebrew-install-support.md  library.md  logging.md  logging_review.md  overview.md  overview_review.md  pet-compat-release-1-closure-pass.md  pet-compat-release-1-final-corrective-patch.md  pet-compat-release-1a-baseline-and-contract.md  pet-compat-release-1b-select-primitive.md  pet-compat-release-1c-shell-integration.md  pet-compat-release-2-corrective-closure-pass.md  pet-compat-release-2-final-serialization-corrective.md  pet-compat-release-2a-command-ingestion-and-history-capture.md  pet-compat-release-2b-multiline-file-and-editor-creation.md  pet-compat-release-2c-integration-and-closure.md  pet-compat-release-3a-variable-choice-compatibility.md  pet-compat-release-3b-explicit-pet-import.md  pet-compat-release-3c-compatibility-diagnostics-and-closure.md  pet-compat-release-4-final-corrective-pass.md  pet-compat-release-4a-ranking-and-sorting.md  pet-compat-release-4b-output-and-notes-presentation.md  pet-compat-release-4c-external-libraries.md  pet-compat-release-4d-integration-and-closure.md  pet-compat-release-5-detached-auto-sync-worker-corrective.md  pet-compat-release-5-detached-worker-protocol-corrective-pass.md  pet-compat-release-5a-auto-sync-policy-and-configuration.md  pet-compat-release-5b-auto-sync-coordinator-and-debounce.md  (+48 more)
scripts/: benchmark.sh  build_themes.py
scripts/ci/: install-protoc.ps1  install-protoc.sh
snip-proto/: Cargo.toml  README.md  build.rs
snip-proto/proto/: sync.proto
snip-proto/src/: lib.rs  snip_proto.rs
snip-sync/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh  cert.pem  config.example.toml  config.toml  docker-compose.yml  key.pem  snippets.db
snip-sync/premade-libraries/: bash-scripts.toml  cicd.toml  command-combinations.toml  csharp.toml  database.toml  docker-essentials.toml  file-text.toml  git-common.toml  go.toml  java.toml  javascript-typescript.toml  kubernetes.toml  monitoring.toml  networking.toml  node.toml  package-manager.toml  permissions.toml  python.toml  rust.toml  search-find.toml  ssh-security.toml  system-admin.toml  terraform.toml
snip-sync/proto/: sync.proto
snip-sync/scripts/: gen-dev-cert.sh
snip-sync/src/: bootstrap.rs  cert.rs  cli.rs  db.rs  editor.rs  lib.rs  main.rs  metrics.rs  paths.rs  premade.rs  process.rs  rate_limiter.rs  test_helpers.rs  update.rs
src/: auto_sync.rs  clipboard.rs  config.rs  diagnostics.rs  encryption.rs  error.rs  lib.rs  library.rs  local_data.rs  logging.rs  main.rs  migration.rs  outcome.rs  output.rs  proto.rs  selector.rs  sort.rs  status_snapshot.rs  sync.rs  sync_commands.rs  transaction.rs  ui.rs  update.rs  usage.rs
src/auto_sync/: execution_lock.rs  executor.rs  lock.rs  mod.rs  notification.rs  pending.rs  pending_lock.rs  policy.rs  schedule.rs  spawn.rs  status.rs  test_events.rs  worker.rs
src/commands/: backup_cmd.rs  clip_cmd.rs  cron_cmd.rs  doctor_cmd.rs  edit_cmd.rs  get_cmd.rs  import_cmd.rs  keybindings_cmd.rs  library_cmd.rs  list_cmd.rs  mod.rs  new_cmd.rs  pet_analysis.rs  premade_cmd.rs  register_cmd.rs  repair_cmd.rs  restore_cmd.rs  run_cmd.rs  search_cmd.rs  select_cmd.rs  shell_cmd.rs  status_cmd.rs  sync_cmd.rs  (+1 more)
tests/: architecture.rs  auto_sync_closure.rs  auto_sync_concurrency.rs  auto_sync_config.rs  auto_sync_coordinator.rs  auto_sync_detached_worker.rs  auto_sync_lifecycle.rs  auto_sync_mutations.rs  auto_sync_regression.rs  auto_sync_security.rs  backup_contracts.rs  backup_snapshot_concurrency.rs  canary_nonexecution.rs  clipboard_tests.rs  debounce_matrix.rs  deterministic_e2e.rs  execution_outcomes.rs  failure_class_contracts.rs  identity_contract.rs  integration.rs  local_contracts.rs  manifest_contracts.rs  mutual_exclusion.rs  output_contracts.rs  package_evidence.rs  persistence_unit.rs  process_lifecycle.rs  pty_integration.rs  readonly_no_recovery.rs  recovery_integration.rs  release4_regression.rs  restore_security.rs  restore_transactions.rs  scale.rs  schema.rs  security.rs  selector_integration.rs  sync_contracts.rs  sync_integration.rs  transaction_crash_recovery.rs  (+1 more)
themes/: Cyber Red.toml  Dark Green.toml  Flexor Dark.toml  Nord.toml
(+31 files in other folders)
