[package]
name = "snp"
version = "1.0.0"
edition = "2021"
rust-version = "1.81"

[[bin]]
name = "snp"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
clipboard-win = "4.5"

[target.'cfg(not(windows))'.dependencies]
copypasta = { version = "0.8", default-features = false }

[dependencies]
dirs = "5.0"
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = "1.0"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
fuzzy-matcher = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
uuid = { version = "1", features = ["v4", "v7"] }
tonic = { version = "0.14", features = ["tls-native-roots", "tls-ring"] }
prost = "0.14"
rustls-native-certs = "0.7"
snip-proto = { path = "./snip-proto" }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.10"
base64 = "0.22"
signal-hook = "0.3"
once_cell = "1.20"
regex = "1.11"
zeroize = { version = "1", features = ["derive"] }
keyring = "3"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
