[package]
name = "snp"
version = "1.1.0"
edition = "2024"
rust-version = "1.88"
description = "A fast, terminal-based snippet manager with TUI, fuzzy search, cloud sync, and encrypted storage"
license = "MIT"
repository = "https://github.com/anomalyco/snip-it"
readme = "README.md"
documentation = "https://github.com/anomalyco/snip-it#readme"
keywords = ["cli", "snippets", "terminal", "tui", "productivity"]
categories = ["command-line-utilities", "development-tools"]
authors = ["David Bowman"]
exclude = [
    ".github/",
    "architecture/",
    ".skills/",
    "plans/",
    "plan.md",
    "AGENTS.md",
    "AGENTS.override.md",
    "CONTRIBUTING.md",
    "USER_GUIDE.md",
    "snippets.example.toml",
    "deny.toml",
    "snip-sync/",
    "tests/",
    "rustfmt.toml",
    ".gitignore",
    "CHANGELOG.md",
    "snip-proto/",
    "SECURITY.md",
]

[[bin]]
name = "snp"
path = "src/main.rs"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-unknown-linux-gnu",
    "aarch64-apple-darwin",
]

[target.'cfg(windows)'.dependencies]
clipboard-win = "4.5"

[target.'cfg(not(windows))'.dependencies]
copypasta = { version = "0.8", default-features = false }

[dependencies]
dirs = "5.0"
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = "1.0"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
fuzzy-matcher = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
uuid = { version = "1", features = ["v4"] }
tonic = { version = "0.14", features = ["tls-native-roots", "tls-ring"] }
snip-proto = { version = "0.1.0", path = "./snip-proto" }
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
signal-hook = "0.3"

regex = "1.11"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
keyring = "3"
crc32fast = "1.4"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
