[package]
name = "snp-cli"
version = "1.2.0"
edition = "2024"
rust-version = "1.85"
description = "Fast terminal snippet manager with fuzzy search, TUI, variable expansion, and end-to-end encrypted cross-device sync"
license = "MIT"
repository = "https://github.com/anomalyco/snip-it"
homepage = "https://github.com/anomalyco/snip-it"
documentation = "https://docs.rs/snp-cli"
readme = "README.md"
keywords = ["cli", "snippets", "terminal", "tui", "productivity"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
authors = ["David Bowman <dbowman91@proton.me>"]
exclude = [
    ".github/",
    "architecture/",
    ".skills/",
    ".opencode/",
    "plans/",
    "plan.md",
    "AGENTS.md",
    "AGENTS.override.md",
    "USER_GUIDE.md",
    "snippets.example.toml",
    "deny.toml",
    "snip-sync/",
    "tests/",
    "rustfmt.toml",
    "rust-toolchain.toml",
    "Cargo.toml.orig",
    ".gitignore",
    "snip-proto/",
    "assets/",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "CODE_OF_CONDUCT.md",
    "CHANGELOG.md",
]

[[bin]]
name = "snp"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = false
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
rustdoc-args = ["--cfg", "docsrs"]

[target.'cfg(windows)'.dependencies]
clipboard-win = "4.5"

[target.'cfg(not(windows))'.dependencies]
arboard = "3"
signal-hook = "0.3"
libc = "0.2"

[dependencies]
dirs = "5.0"
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help"] }
clap_complete = "4.5"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = "1.0"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
fuzzy-matcher = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
uuid = { version = "1", features = ["v4"] }
tonic = { version = "0.14", features = ["tls-native-roots", "tls-ring"] }
prost = "0.14"
tonic-prost = "0.14"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"

regex = "1.11"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
keyring = "3"
crc32fast = "1.4"
unicode-width = "0.2"
lzma-rs = "0.3"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
