[package]
name = "snip-proto"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "gRPC protocol definitions for snip-it sync"
license = "MIT"
authors = ["David Bowman <dbowman91@proton.me>"]
keywords = ["grpc", "protobuf", "sync", "snippets"]
categories = ["encoding"]
publish = false

[dependencies]
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
