[package]
name = "snip-sync"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "gRPC sync server for snp snippet manager"
license = "MIT"
authors = ["David Bowman <dbowman91@proton.me>"]
readme = "README.md"
keywords = ["grpc", "sync", "snippets", "server", "sqlite"]
categories = ["command-line-utilities", "web-programming"]
publish = false

[lib]
name = "snip_sync"
path = "src/lib.rs"

[features]
default = []
# Enables the `test_helpers` module, which is used by integration tests
# to spin up the server in-process and observe gRPC metadata. Not used
# in production builds.
test-helpers = []

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "2"
tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"
prometheus = "0.13"
base64 = "0.22"
toml = "0.8"
dirs = "6.0"
snip-proto = { version = "0.1.0", path = "../snip-proto" }
argon2 = "0.5"
getrandom = "0.2"
sha2 = "0.10"
subtle = "2"
tokio-stream = { version = "0.1", features = ["net"] }

[[bin]]
name = "snip-sync"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.10"
